kubernetes/apps/cluster01/default/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.home.mordex.io`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
      middlewares:
        - name: default-headers
  tls:
    secretName: home-mordex-io-tls
